--- a/mylsf/index.haml
+++ b/mylsf/index.haml
@@ -3,5 +3,39 @@
   %head
     %meta{:charset => 'utf-8'}
     %title MyLSF MockUp
+    %link{:rel => 'stylesheet', :href => '../bower_components/mobile-angular-ui/dist/css/mobile-angular-ui-hover.min.css'}
+    %link{:rel => 'stylesheet', :href => '../bower_components/mobile-angular-ui/dist/css/mobile-angular-ui-base.min.css'}
+    %link{:rel => 'stylesheet', :href => '../bower_components/mobile-angular-ui/dist/css/mobile-angular-ui-desktop.min.css'}
   %body
-    %h1 Such
+    #mainSidebar.sidebar.sidebar-left{:toggleable => true, 'parent-active-class' => 'sidebar-left-in'}
+      %h1.app-name My App
+      .scrollable
+        .scrollable-content
+          .list-group{:toggle => 'off', :bubble => true, :target => 'mainSidebar'}
+            %a.list-group-item{:href => '#/'}
+              Home
+              %i.fa.fa-chevron-right.pull-right
+    .app
+      .navbar.navbar-app.navbar-absolute-top
+        .navbar-brand.navbar-brand-center{'yield-to' => 'title'}
+          %span My App
+        .btn-group.pull-left
+          .btn.btn-navbar.sidebar-toggle{'ng-click' => 'toggle("mainSidebar")'}
+            %i.fa.fa-bars
+            Menu
+        .btn-group.pull-right{'yield-to' => 'navbarAction'}
+          .btn.btn-navbar
+            %i.fa.fa-plus
+            New  
+    .navbar.navbar-app.navbar-absolute-bottom
+      .btn-group.justified
+        %a.btn.btn-navbar.btn-icon-only{:href => '#/route1'}
+          %i.fa.fa-home.fa-navbar
+        %a.btn.btn-navbar.btn-icon-only{:href => '#/route2'}
+          %i.fa.fa-list.fa-navbar
+
+    .app-body
+      %ng-view.app-content
+    %script{:src =>'angular.min.js'}
+    %script{:src => 'angular-route.min.js'}
+    %script{:src => 'mobile-angular-ui/dist/js/mobile-angular-ui.min.js'}
