--- a/mylsf/index.haml
+++ b/mylsf/index.haml
@@ -36,6 +36,5 @@
 
     .app-body
       %ng-view.app-content
-    %script{:src =>'angular.min.js'}
-    %script{:src => 'angular-route.min.js'}
-    %script{:src => 'mobile-angular-ui/dist/js/mobile-angular-ui.min.js'}
+    %script{:src => '../bower_components/angular/angular.min.js'}
+    %script{:src => '../bower_components/mobile-angular-ui/dist/js/mobile-angular-ui.min.js'}
