Tracking GamePad API demo.

--- a/index.haml
+++ b/index.haml
@@ -8,3 +8,5 @@
     %ol
       %li
         %a{:href => './mylsf'} MyLSF
+      %li
+        %a{:href => './gamepad-api/gamepadapi-demo.html'} GamePad API
