Prototype of collaborative research planning.

--- a/index.haml
+++ b/index.haml
@@ -10,3 +10,5 @@
         %a{:href => './mylsf'} MyLSF
       %li
         %a{:href => './gamepad-api/gamepadapi-demo.html'} GamePad API
+      %li
+        %a{:href => './suk-research'} Forschungstabelle für Schlacht-um-Kyoto
