Added TogetherJS and made cells editable.

--- a/suk-research/index.haml
+++ b/suk-research/index.haml
@@ -29,6 +29,7 @@
 
   %body
     Schlacht Um Kyoto
+    %button#togetherjs Start TogetherJS
     #add +
     %table#research
       %tr
@@ -86,10 +87,33 @@
         res.appendChild(tr);
       }, false);
 
-      research.addEventListener('click', function(e) {
+    :javascript
+      var res = document.querySelector('#research');
+      res.addEventListener('click', function(e) {
         var cell = e.target;
-        console.log(cell, cell.nodeName);
-        if (cell.nodeName !== 'TH') {
+        if (cell.nodeName === 'TD') {
           cell.classList.toggle('mark');
+
+          var val = cell.textContent;
+          cell.textContent = '';
+          var input = document.createElement('input');
+          input.type = 'text';
+          input.value = val;
+          input.addEventListener('keypress', function(e) {
+            if (!e) e = window.event;
+            var kc = e.keyCode || e.which;
+            if (kc == '13') {
+              cell.textContent = this.value;
+              this.parentNode.removeChild(this);
+            }
+          }, false);
+          cell.appendChild(input);
         }
       }, false);
+
+    :javascript
+      var tgth = document.querySelector('#togetherjs');
+      tgth.addEventListener('click', function(TogetherJS) {
+      }, false);
+
+    %script{:type => 'text/javascript', :src => 'togetherjs.min.js'}
