Link to bookmarklet

--- a/index.haml
+++ b/index.haml
@@ -12,3 +12,5 @@
         %a{:href => './gamepad-api/gamepadapi-demo.html'} GamePad API
       %li
         %a{:href => './suk-research'} Forschungstabelle für Schlacht-um-Kyoto
+      %li
+        %a{:href => './tangrams-bookmarklet'} Bookmarklet für Tangrams
