Fork me on GitHub!

--- a/js13kgames/src/css/js13k-breaker-panel.css
+++ b/js13kgames/src/css/js13k-breaker-panel.css
@@ -5,6 +5,17 @@ body {
 
 #fork-on-github {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 4em;
+    right: -3em;
+    transform: rotate(45deg);
+}
+
+#fork-on-github a {
+    color: white;
+    background: black;
+    display: block;
+    width: 15em;
+    padding: 0.5em;
+    text-align: center;
+    text-decoration: none;
 }
