--- a/js13kgames/src/css/js13k-breaker-panel.css
+++ b/js13kgames/src/css/js13k-breaker-panel.css
@@ -11,13 +11,17 @@ body {
 }
 
 #fork-on-github a {
-    color: white;
-    background: black;
+    color: #FFFFFF;
+    background: #000000;
     display: block;
     width: 15em;
     padding: 0.5em;
     text-align: center;
     text-decoration: none;
+}
+
+svg path {
+    fill: #FFFFFF;
 }
 
 svg circle {
