--- a/js13kgames/src/css/js13k-breaker-panel.css
+++ b/js13kgames/src/css/js13k-breaker-panel.css
@@ -1,6 +1,17 @@
 body {
+    background: darkgray;
+    width: 300px;
+    height: 100%;
+    max-height: 480px;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+}
+
+#wrap {
     background: white;
     color: black;
+    padding: 1%;
 }
 
 #fork-on-github {
@@ -20,13 +31,17 @@ body {
     text-decoration: none;
 }
 
+svg g {
+    cursor: move;
+}
+
 svg path {
     fill: #FFFFFF;
 }
 
 @keyframes live {
     to {
-        stroke-dashoffset: 100;
+        stroke-dashoffset: 300;
     }
 }
 
