--- a/src/css/js13k-breaker-panel.css
+++ b/src/css/js13k-breaker-panel.css
@@ -11,7 +11,7 @@ body {
 #wrap {
     background: white;
     color: black;
-    padding: 1%;
+    margin: 1%;
 }
 
 #fork-on-github {
@@ -31,6 +31,11 @@ body {
     text-decoration: none;
 }
 
+#game {
+    margin-left: -1%;
+    margin-right: -1%;
+}
+
 svg g {
     cursor: move;
 }
@@ -39,6 +44,11 @@ svg path {
     fill: #FFFFFF;
     stroke: #000000;
     stroke-width: 1;
+}
+
+svg circle {
+    stroke: #000000;
+    fill: #FFFFFF;
 }
 
 @keyframes live {
@@ -50,4 +60,9 @@ svg path {
 #game svg .live {
     stroke-dasharray: 5;
     animation: live 5s linear reverse;
+}
+
+.explanation svg {
+    float: left;
+    margin-right: 0.5em;
 }
