--- a/src/css/js13k-breaker-panel.css
+++ b/src/css/js13k-breaker-panel.css
@@ -5,7 +5,7 @@ body {
     max-height: 480px;
     margin-left: auto;
     margin-right: auto;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 #wrap {
@@ -14,6 +14,7 @@ body {
     margin: 1%;
 }
 
+/*
 #fork-on-github {
     position: absolute;
     top: 4em;
@@ -30,25 +31,20 @@ body {
     text-align: center;
     text-decoration: none;
 }
+*/
 
 #game {
     margin-left: -1%;
     margin-right: -1%;
 }
 
-svg g {
-    cursor: move;
+svg path, svg circle {
+    fill: #FFFFFF;
+    stroke: #000000;
 }
 
 svg path {
-    fill: #FFFFFF;
-    stroke: #000000;
     stroke-width: 1;
-}
-
-svg circle {
-    stroke: #000000;
-    fill: #FFFFFF;
 }
 
 @keyframes live {
