--- a/src/css/js13k-breaker-panel.css
+++ b/src/css/js13k-breaker-panel.css
@@ -2,10 +2,7 @@ body {
     background: darkgray;
     width: 300px;
     height: 100%;
-    max-height: 480px;
-    margin-left: auto;
-    margin-right: auto;
-    overflow-x: hidden;
+    margin: 0 auto;
 }
 
 #wrap {
@@ -13,25 +10,6 @@ body {
     color: black;
     margin: 1%;
 }
-
-/*
-#fork-on-github {
-    position: absolute;
-    top: 4em;
-    right: -3em;
-    transform: rotate(45deg);
-}
-
-#fork-on-github a {
-    color: #FFFFFF;
-    background: #000000;
-    display: block;
-    width: 15em;
-    padding: 0.5em;
-    text-align: center;
-    text-decoration: none;
-}
-*/
 
 #game {
     margin-left: -1%;
@@ -58,7 +36,7 @@ svg path {
     animation: live 5s linear reverse;
 }
 
-.explanation svg {
+.explain svg {
     float: left;
     margin-right: 0.5em;
 }
